@@ -5657,6 +5657,7 @@ $wgSpecialPageGroups = array(
 	'Mostlinkedtemplates'       => 'highuse',
 	'Mostcategories'            => 'highuse',
 	'Mostimages'                => 'highuse',
+	'Mostinterwikis'            => 'highuse',
 	'Mostrevisions'             => 'highuse',
 
 	'Allpages'                  => 'pages',
