@@ -2357,6 +2357,7 @@ Possible alternatives to the word 'content' are 'subject matter' or 'wiki subjec
 # Miscellaneous special pages
 'nbytes' => 'Message used on the history page of a wiki page. Each version of a page consist of a number of bytes. $1 is the number of bytes that the page uses. Uses plural as configured for a language based on $1.',
 'ncategories' => "Used in the special page '[[Special:MostCategories]]' in brackets after each entry on the list signifying how many categories a page is part of. $1 is the number of categories.",
+'ninterwikis' => "Used in the special page '[[Special:MostInterwikis]]' in brackets after each entry on the list signifying how many interwikis a page is part of. $1 is the number of interwikis.",
 'nlinks' => 'This appears in brackets after each entry on the special page [[Special:MostLinked]]. $1 is the number of wiki links.',
 'nmembers' => 'Appears in brackets after each category listed on the special page [[Special:WantedCategories]]. $1 is the number of members of the category.',
 'nrevisions' => 'Number of revisions.',
@@ -2387,6 +2388,7 @@ $1 is a page title",
 'mostlinkedtemplates' => 'Name of special page displayed in [[Special:SpecialPages]]',
 'mostcategories' => 'Name of special page displayed in [[Special:SpecialPages]]',
 'mostimages' => 'Name of special page displayed in [[Special:SpecialPages]]',
+'mostinterwikis' => 'Name of special page displayed in [[Special:SpecialPages]]',
 'mostrevisions' => 'Name of special page displayed in [[Special:SpecialPages]]',
 'prefixindex' => 'The page title of [[Special:PrefixIndex]]. When the user limits the list to a certain namespace, {{msg-mw|allinnamespace}} is used instead.',
 'prefixindex-namespace' => 'The page title of [[Special:PrefixIndex]] limited to a specific namespace. Similar to {{msg-mw|allinnamespace}}. $1 is the name of the namespace',
