@@ -1650,6 +1650,7 @@ $wgMessageStructure = array(
 	'specialpages' => array(
 		'nbytes',
 		'ncategories',
+		'ninterwikis',
 		'nlinks',
 		'nmembers',
 		'nrevisions',
@@ -1696,6 +1697,8 @@ $wgMessageStructure = array(
 		'mostcategories-summary',
 		'mostimages',
 		'mostimages-summary',
+		'mostinterwikis',
+		'mostinterwikis-summary',
 		'mostrevisions',
 		'mostrevisions-summary',
 		'prefixindex',
